--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,5 @@
 layout: layout.njk
 title: One Billion Seconds
 ---
-<div>One billion seconds ago:</div>
-<div id="onebillionsecondsago" class="is-size-5 has-text-weight-semibold">ONE BILLION SECONDS AGO</div>
-<br>
-<div class="">One billion seconds from now:</div>
-<div id="onebillionsecondsfromnow" class="is-size-5 has-text-weight-semibold">ONE BILLION SECONDS IN FUTURE</div>
-<script src="{{ '/assets/js/main.js' | url}}"></script>
+<div id="app"></div>
+<script src="{{ '/assets/js/index.js' | url}}"></script>
