Add google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@ title: One Billion Seconds
                         <td>1,000</td>
                         <td class="is-size-5 has-text-weight-semibold">16 minutes 40 seconds<br/>
                             <span class="is-size-7 has-text-weight-normal is-family-sans-serif">
-                                About the time it takes to run two miles with a mouth full of skittles, or travel <a href="https://www.omnicalculator.com/physics/free-fall?c=USD&v=g:32.17405!fps2!l,v_0:0!ftps,t:1000!sec">3,000 miles from a free fall</a> due to gravity alone (about 6 round trips to the ISS from earth).
+                                About the time it takes to run two miles with a mouth full of skittles, or travel <a href="https://www.omnicalculator.com/physics/free-fall?c=USD&v=g:32.17405!fps2!l,v_0:0!ftps,t:1000!sec">3,000 miles from a free fall</a> due to gravity alone (about 6 round trips from earth to the International Space Station).
                             </span>
                         </td>
                     </tr>
